--- a/Shuqair_Nazir_Project1/css/styles.css
+++ b/Shuqair_Nazir_Project1/css/styles.css
@@ -134,6 +134,26 @@ h3{
 	margin-top:267px;
 }
 
+.search{
+	margin-left:30px;
+	margin-top: 200px;
+	
+	
+	
+}
+
+#searchB{
+	margin-left:0px;
+	width:600px;
+	height:50px;
+
+}
+
+#searchBtn{
+	
+	
+}
+
 
 #vidTitle{
 	
