--- a/Shuqair_Nazir_Project1/css/styles.css
+++ b/Shuqair_Nazir_Project1/css/styles.css
@@ -1,9 +1,9 @@
 @charset "UTF-8";
 /*	CSS Document 
 	Nazir Shuqair
-	VFW 1308
-	29 Aug 2013
-	Project 4
+	MiU 1310
+	3 OCT 2013
+	Project 1
 */
 
 @font-face{
